tdf#125566 Add arrangement functions to position & size sidebar

Adds arrangement actions to position & size sidebar so it is
possible to move the object up/down in the stack.

As Draw/Impress uses it's own action names for the same UNO action
(Forward/Back in Draw and ObjectForwardOne and ObjectBackOne in
Writer/Calc) also add the global ones to Draw/Impress and connect
them to the same function as Forward/Back. This commit does not
unify them however (Forward/Back are still used in menus/toolbars)
but this could be done in the future.

Change-Id: Ibb152f29dbe11dfb1b6a057e6ea60b21029912e2